# pax-collector

pax-collector/: README.md
pax-collector/docker-compose/prometheus-grafana/: docker-compose.yml  mqtt.env  mqtt_dragino.env  prometheus.yml  stack.env
pax-collector/docker-compose/prometheus-grafana/prometheus/: prometheus.yml
pax-collector/pax-exporter/: Dockerfile  mqtt_client.py  prom_client.py  pyproject.toml  requirements.txt  stack.env
